Added background job to remove dead games
